--- a/todo/templates/base.html
+++ b/todo/templates/base.html
@@ -6,10 +6,10 @@
 <body>
   <nav>
     {% if user.is_authenticated %}
-    
+       <a href="{% url 'accountapp:logout' %}">Logout</a>
       
     {% else %}
-     
+      <a href="{% url 'accountapp:login' %}">Login</a>
       <a href="{% url 'accountapp:register' %}">Register</a>
      
       
