--- a/game/templates/game/game.html
+++ b/game/templates/game/game.html
@@ -1,4 +1,5 @@
-<h1>hhhhhh</h1>
+{% extends 'base.html' %}
+{% block content %}
 {% for task in tasks %}
     <div>
         <h4>{{ task.todo }}</h4>
@@ -8,4 +9,5 @@
         </form>
     </div>
 {% endfor %}
+{% endblock %}
 
