--- a/todo/templates/todo/todo_delete.html
+++ b/todo/templates/todo/todo_delete.html
@@ -1,8 +1,10 @@
+{% extends 'base.html' %}
 <!DOCTYPE html>
 <html>
 <head>
     <title>Delete Todo</title>
 </head>
+{% block content %}
 <body>
     <h1>Delete Todo</h1>
     <p>Are you sure you want to delete the following todo?</p>
@@ -12,4 +14,5 @@
         <button type="submit">Delete</button>
     </form>
 </body>
+{% endblock %}
 </html>
