--- a/todo/templates/todo/todo_update.html
+++ b/todo/templates/todo/todo_update.html
@@ -1,8 +1,10 @@
+{% extends 'base.html' %}
 <!DOCTYPE html>
 <html>
 <head>
     <title>Update Todo</title>
 </head>
+{% block content %}
 <body>
     <h1>Update Todo</h1>
     <form method="post">
@@ -11,4 +13,5 @@
         <button type="submit"></a>Update</button>
     </form>
 </body>
+{% endblock %}
 </html>
