Updated the admin.py in the todo and game app. Updated the Game and Todo model. And and moved the Game model and Todo model to the game app.Updated the game_view, todo_list.html, game.html and the path in the project urls.py.

--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -20,4 +20,5 @@
     {% endfor %}
   </ul>
   <a href="{% url 'todo:todo_create' %}">Create New Todo</a>   
+  <a href="{% url 'game:game' %}">Play</a>  
 {% endblock %}
