--- a/game/templates/game/todo_create.html
+++ b/game/templates/game/todo_create.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
-
+<h1>todo_create</h1>
 {% block content %}
-  <h2>Create Game</h2>
+  <h2>Create Todo</h2>
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
-    <input type="submit" value="Create">
+    <button type="submit">Create</button>
   </form>
 {% endblock %}
