Removed a line of code in the view todo_guest_complete.

--- a/todo/templates/todo/todo_guest_complete.html
+++ b/todo/templates/todo/todo_guest_complete.html
@@ -4,4 +4,4 @@
   <h1>Guest Task Completed</h1>
   <p>The guest task has been marked as completed successfully.</p>
   <a href="{% url 'todo:todo_list' %}">Go back to Todo List</a>
-{% endblock %}
+{% endblock %
