--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -3,33 +3,31 @@
 {% block content %}
 
 <h2>Todo List</h2>
-<ul>
-  {% for todo in todos %}
-    <li>
-      {{ todo.title }}
-      <a href="{% url 'todo:todo_update' todo.pk %}">Edit</a>
-      <a href="{% url 'todo:todo_delete' todo.pk %}">Delete</a>
-      {% if todo.completed %}
-        (Completed)
-      {% endif %}
-      <ul>
-        {% for guest in todo.guest_set.all %}
-          <li>
-            {{ guest.email }}
-            {% if not todo.completed and user.email == guest.email %}
-            <form method="POST" action="{% url 'todo_guest_complete' guest.id %}">
-              {% csrf_token %}
-              <input type="checkbox" name="completed" id="completed{{ guest.id }}" onchange="this.form.submit()" />
-              <label for="completed{{ guest.id }}">Mark as Completed</label>
-            </form>
-            {% endif %}
-          </li>
+<script>
+  function toggleCheckbox(checkboxId) {
+      const checkbox = document.getElementById(checkboxId);
+      checkbox.checked = !checkbox.checked;
+  }
+</script>
+
+<h1>Todo List</h1>
+    <form method="POST" action="/create_todo">
+        {% csrf_token %}
+        <label for="new_todo">New Todo:</label>
+        <input type="text" id="new_todo" name="new_todo">
+        <button type="submit">Add</button>
+    </form>
+    
+    <ul>
+        {% for todo in todos %}
+            <li>
+                <label for="todo_{{ todo.id }}">
+                    <input type="checkbox" id="todo_{{ todo.id }}" onclick="toggleCheckbox('todo_{{ todo.id }}');" {% if todo.completed %}checked{% endif %}>
+                    {{ todo.title }}
+                </label>
+            </li>
         {% endfor %}
-      </ul>
-    </li>
-  {% endfor %}
-</ul>
-<a href="{% url 'todo:todo_create' %}">Create Todo</a>
+    </ul>
 
 
 {% endblock %}
