Updated the template create_todo.html.

--- a/todo/templates/todo/create_todo.html
+++ b/todo/templates/todo/create_todo.html
@@ -5,10 +5,13 @@
 </head>
 <body>
     <h1>Create Todo</h1>
-    <form method="POST">
+    <form method="post" action="/create_todo/">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Create</button>
+        <label for="title">Title:</label>
+        <input type="text" id="title" name="title" required><br><br>
+        <label for="description">Description:</label>
+        <textarea id="description" name="description" required></textarea><br><br>
+        <input type="submit" value="Create Todo">
     </form>
 </body>
 </html>
