--- a/todo/templates/todo/create_todo.html
+++ b/todo/templates/todo/create_todo.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <h1>Create Todo</h1>
-    <form method="post" action="/create_todo/">
+    <form method="post" action="/create_todo">
         {% csrf_token %}
         <label for="title">Title:</label>
         <input type="text" id="title" name="title" required><br><br>
