--- a/todo/templates/todo/todo_create.html
+++ b/todo/templates/todo/todo_create.html
@@ -1,18 +1,13 @@
 {% extends 'base.html' %}
-<h1>todo_create</h1>
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Create Todo</title>
-</head>
+
 {% block content %}
-<body>
-    <h1>Create Todo</h1>
-    <form method="post">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">Create</button>
-    </form>
-</body>
+
+<h2>Create Todo</h2>
+
+<form method="POST" action="{% url 'todo:create_todo' %}">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Add</button>
+</form>
+
 {% endblock %}
-</html>
