--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -3,32 +3,37 @@
 {% block content %}
 
 <h2>Todo List</h2>
-<script>
-  function toggleCheckbox(checkboxId) {
-      const checkbox = document.getElementById(checkboxId);
-      checkbox.checked = !checkbox.checked;
-  }
-</script>
 
-<h1>Todo List</h1>
-    <form method="POST" action="/create_todo">
-        {% csrf_token %}
-        <label for="new_todo">New Todo:</label>
-        <input type="text" id="new_todo" name="new_todo">
-        <button type="submit">Add</button>
-    </form>
-    
-    <ul>
-        {% for todo in todos %}
-            <li>
-                <label for="todo_{{ todo.id }}">
-                    <input type="checkbox" id="todo_{{ todo.id }}" onclick="toggleCheckbox('todo_{{ todo.id }}');" {% if todo.completed %}checked{% endif %}>
-                    {{ todo.title }}
-                </label>
-            </li>
-        {% endfor %}
-    </ul>
+<h3>User Todos</h3>
+<form method="POST" action="{% url 'todo:create_todo' %}">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Add</button>
+</form>
 
+<ul>
+    {% for todo in user_todos %}
+        <li>
+            <label for="todo_{{ todo.id }}">
+                <input type="checkbox" id="todo_{{ todo.id }}" onclick="toggleCheckbox('todo_{{ todo.id }}');" {% if todo.completed %}checked{% endif %}>
+                {{ todo.title }}
+            </label>
+        </li>
+    {% endfor %}
+</ul>
+
+<h3>Guest Todos</h3>
+
+<ul>
+    {% for todo in guest_todos %}
+        <li>
+            <label for="todo_{{ todo.id }}">
+                <input type="checkbox" id="todo_{{ todo.id }}" onclick="toggleCheckbox('todo_{{ todo.id }}');" {% if todo.completed %}checked{% endif %}>
+                {{ todo.title }}
+            </label>
+        </li>
+    {% endfor %}
+</ul>
 
 {% endblock %}
 
