--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -2,6 +2,29 @@
 
 {% block content %}
 
+<ul>
+  {% for todo in todos %}
+    <li>
+      {{ todo.title }}
+      {% if todo.completed_by %}
+        (Completed by: {{ todo.completed_by }})
+      {% endif %}
+    </li>
+  {% endfor %}
+</ul>
+
+
+{% endblock %}
+
+
+
+
+
+
+<!-- {% extends 'base.html' %}
+
+{% block content %}
+
 <h2>Todo List</h2>
 
 <h3>User Todos</h3>
@@ -36,7 +59,7 @@
 </ul>
 
 {% endblock %}
-
+ -->
 
 <!-- 
 
