Updated the urls.py in the todo app. Updated the todo_list, todo_create, todo_update and the todo_delete in the todo app view.py. And updated the todo_list template.

--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -2,17 +2,22 @@
 
 {% block content %}
 
-<ul>
-  {% for todo in todos %}
-    <li>
-      {{ todo.title }}
-      {% if todo.completed_by %}
-        (Completed by: {{ todo.completed_by }})
-      {% endif %}
-    </li>
-  {% endfor %}
-</ul>
+<h2>Todo List</h2>
+  <ul>
+    {% for todo in todos %}
+      <li>
+        <input type="checkbox" {% if todo.completed %}checked{% endif %} disabled>
+        {{ todo.title }}
+        <a href="{% url 'todo:todo_update' pk=todo.pk %}">Edit</a>
+        <a href="{% url 'todo:todo_delete' pk=todo.pk %}">Delete</a>
+      </li>
+    {% empty %}
+      <li>No todos found.</li>
+    {% endfor %}
+  </ul>
+  <a href="{% url 'todo:todo_create' %}">Create New Todo</a>
 
+  
 
 {% endblock %}
 
@@ -21,9 +26,8 @@
 
 
 
-<!-- {% extends 'base.html' %}
+<!-- 
 
-{% block content %}
 
 <h2>Todo List</h2>
 
@@ -58,7 +62,7 @@
     {% endfor %}
 </ul>
 
-{% endblock %}
+
  -->
 
 <!-- 
