Updated the todo_update view and the todo_list template in the todo app.

--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -3,19 +3,27 @@
 {% block content %}
 
 <h2>Todo List</h2>
-  <ul>
-    {% for todo in todos %}
-      <li>
-        <input type="checkbox" {% if todo.completed %}checked{% endif %} disabled>
+<ul>
+  {% for todo in todos %}
+    <li>
+      <form method="post" action="{% url 'todo:todo_update' pk=todo.pk %}">
+        {% csrf_token %}
+        <input type="hidden" name="completed_by" value="{{ todo.completed_by }}">
+        <input type="checkbox" {% if todo.completed %}checked{% endif %} 
+               onchange="this.form.submit()">
         {{ todo.title }}
         <a href="{% url 'todo:todo_update' pk=todo.pk %}">Edit</a>
         <a href="{% url 'todo:todo_delete' pk=todo.pk %}">Delete</a>
-      </li>
-    {% empty %}
-      <li>No todos found.</li>
-    {% endfor %}
-  </ul>
-  <a href="{% url 'todo:todo_create' %}">Create New Todo</a>
+        {% if todo.completed %}
+          <p>Completed by: {{ todo.completed_by }}</p>
+        {% endif %}
+      </form>
+    </li>
+  {% empty %}
+    <li>No todos found.</li>
+  {% endfor %}
+</ul>
+<a href="{% url 'todo:todo_create' %}">Create New Todo</a>
 
   
 
