Comment out the todo_list view and template and create new onese.

--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -1,7 +1,38 @@
 {% extends 'base.html' %}
 
 {% block content %}
+<h2>Todo List</h2>
+{% for completed in completed_todos %}
+  <h3>Completed by: {{ completed.completed_by }}</h3>
+  <ul>
+    {% for todo in completed.todos %}
+      <li>
+        <form method="post" action="{% url 'todo:todo_update' pk=todo.pk %}">
+          {% csrf_token %}
+          <input type="hidden" name="completed_by" value="{{ todo.completed_by }}">
+          <input type="checkbox" {% if todo.completed %}checked{% endif %} 
+                 onchange="this.form.submit()">
+          {{ todo.title }}
+          <a href="{% url 'todo:todo_update' pk=todo.pk %}">Edit</a>
+          <a href="{% url 'todo:todo_delete' pk=todo.pk %}">Delete</a>
+        </form>
+      </li>
+    {% empty %}
+      <li>No todos found.</li>
+    {% endfor %}
+  </ul>
+{% empty %}
+  <p>No completed todos found.</p>
+{% endfor %}
 
+<a href="{% url 'todo:todo_create' %}">Create New Todo</a>
+
+  
+
+{% endblock %}
+
+
+<!-- 
 <h2>Todo List</h2>
 <ul>
   {% for todo in todos %}
@@ -24,14 +55,8 @@
   {% endfor %}
 </ul>
 <a href="{% url 'todo:todo_create' %}">Create New Todo</a>
-
+ -->
   
-
-{% endblock %}
-
-
-
-
 
 
 <!-- 
