--- a/todo/templates/base.html
+++ b/todo/templates/base.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <title>Todo App</title>
 </head>
 <body>
