--- a/todo/templates/todo/todo_create.html
+++ b/todo/templates/todo/todo_create.html
@@ -2,10 +2,11 @@
 
 {% block content %}
 
-<form method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Add Task</button>
-  </form>
+<form method="POST" action="{% url 'todo:todo_create' %}">
+  {% csrf_token %}
+  <input type="text" name="title" placeholder="Enter task title" required>
+  <button type="submit">Add Task</button>
+</form>
+
 
 {% endblock %}
