--- a/todo/templates/todo/todo_update.html
+++ b/todo/templates/todo/todo_update.html
@@ -11,8 +11,8 @@
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <button type="submit"></a>Update</button>
-    </form>
+        <button type="submit">Update</button>
+      </form>
 </body>
 {% endblock %}
 </html>
