Created Delete and Edit funktion to the completed task whit todo_completed_delete and todo_completed_update view and templates and new paths. Updated the todo_list, todo_update and todo_create views and templates.

--- a/todo/templates/base.html
+++ b/todo/templates/base.html
@@ -4,7 +4,7 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <title>Todo App</title>
 </head>
-<body>
+<body>todo/templates/todo/todo_list.html
   <nav>
     {% if user.is_authenticated %}
        <a href="{% url 'accountapp:logout' %}">Logout</a>
