--- a/todo/templates/base.html
+++ b/todo/templates/base.html
@@ -7,8 +7,8 @@
 <body>todo/templates/todo/todo_list.html
   <nav>
     {% if user.is_authenticated %}
-       <a href="{% url 'accountapp:logout' %}">Logout</a>
-      
+      <h1>Welcome, {{ user.username }}!</h1>
+       <a href="{% url 'accountapp:logout' %}">Logout</a>   
     {% else %}
       <a href="{% url 'accountapp:login' %}">Login</a>
       <a href="{% url 'accountapp:register' %}">Register</a>
