--- a/todo/templates/todo/todo_update.html
+++ b/todo/templates/todo/todo_update.html
@@ -1,16 +1,17 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h2>Edit Task</h2>
-  <form method="POST">
+  <h1>Update Task</h1>
+  <form method="post" action="{% url 'todo:todo_completed_update' pk=completed_todo.pk %}">
     {% csrf_token %}
     {{ form.as_p }}
-    <input type="checkbox" name="completed" {% if todo.completed %}checked{% endif %}>
-    <label for="id_completed">Completed</label>
-    <br>
-    {% if todo.completed %}
-    <input type="text" name="completed_by" value="{{ todo.completed_by }}" placeholder="Completed by">
-    {% endif %}
     <button type="submit">Update</button>
+    <button type="button" id="cancelButton">Cancel</button>
   </form>
+
+  <script>
+    document.getElementById("cancelButton").addEventListener("click", function() {
+      window.location.href = "{% url 'todo:todo_list' %}";
+    });
+  </script>
 {% endblock %}
