--- a/todo/templates/todo/todo_view.html
+++ b/todo/templates/todo/todo_view.html
@@ -3,11 +3,11 @@
 {% block content %}
   <h2>Task Details</h2>
   <p><strong>Title:</strong> {{ todo.title }}</p>
-  <p><strong>Descrption:</strong> {{ todo.description }}</p>
+  <p><strong>Description:</strong> {{ todo.description }}</p>
   <p><strong>Completed:</strong> {% if todo.completed %}Yes{% else %}No{% endif %}</p>
   {% if todo.completed_by %}
     <p><strong>Completed By:</strong> {{ todo.completed_by }}</p>
   {% endif %}
-  <a href="{% url 'todo:todo_update' pk=todo.pk %}">Edit</a>
-  <a href="{% url 'todo:todo_delete' pk=todo.pk %}">Delete</a>
+  <a href="{% url 'todo:todo_update' pk=todo.pk %}"><button>Edit</button></a>
+  <a href="{% url 'todo:todo_list' %}"><button>Back</button></a>
 {% endblock %}
