--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -60,8 +60,8 @@
           </form>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-primary" id="completeTaskBtn">Complete</button>
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary" id="completeTaskBtn">Submit</button>
+
         </div>
       </div>
     </div>
@@ -69,7 +69,9 @@
   
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script>
+   
    $(document).ready(function() {
+    
     $('.complete-btn').click(function() {
       var taskId = $(this).data('task-id');
       $('#taskIdInput').val(taskId);
@@ -93,6 +95,7 @@
       });
     });
   });
+
   </script>
 {% endblock %}
 
