--- a/todo/templates/todo/todo_list.html
+++ b/todo/templates/todo/todo_list.html
@@ -1,36 +1,37 @@
 {% extends 'base.html' %}
 
 {% block content %}
-  <h2>Todo List</h2>
-  <form id="addTaskForm" method="POST" action="{% url 'todo:todo_create' %}">
-    {% csrf_token %}
-    <input type="text" name="title" id="taskTitleInput" placeholder="Enter task title" required>
-    <button type="submit">Add Task</button>
-    <input type="text" name="description" id="descriptionInput" placeholder="Enter task description">
-    <button type="submit">Add Description</button>
-  </form>
+<h2>Todo List</h2>
+<form id="addTaskForm" method="POST" action="{% url 'todo:todo_create' %}">
+  {% csrf_token %}
+  <input type="text" name="title" id="taskTitleInput" placeholder="Enter task title" required>
+  <button type="submit">Add Task</button>
+  <input type="text" name="description" id="descriptionInput" placeholder="Enter task description">
+  <button type="submit">Add Description</button>
+</form>
 
-  <ul id="taskList">
-    {% for todo in uncompleted_todos %}
-    <li>
-      {{ todo.title }}
-      
-      <a href="{% url 'todo:todo_view' pk=todo.pk %}">View</a>
-      <a href="{% url 'todo:todo_update' pk=todo.pk %}">Edit</a>
-      <a href="{% url 'todo:todo_delete' pk=todo.pk %}">Delete</a>
-      <button type="button" class="complete-btn" data-toggle="modal" data-target="#completeModal" data-task-id="{{ todo.pk }}">Complete</button>
-    </li>
-    {% endfor %}
-  </ul>
+<ul id="taskList">
+  {% for todo in uncompleted_todos %}
+  <li>
+    {{ todo.title }}
+    
+    <a href="{% url 'todo:todo_view' pk=todo.pk %}">View</a>
+    <a href="{% url 'todo:todo_update' pk=todo.pk %}">Edit</a>
+    <a href="{% url 'todo:todo_delete' pk=todo.pk %}">Delete</a>
+    <button type="button" class="complete-btn" data-toggle="modal" data-target="#completeModal" data-task-id="{{ todo.pk }}">Complete</button>
+  </li>
+  {% endfor %}
+</ul>
 
-    {% for completed_by, todos in completed_todos.items %}
+{% for completed_by, todos in completed_todos.items %}
+<li>
+  <span class="completed-task-group">Completed by: {{ completed_by }}</span>
+  <ul>
+    {% for todo in todos %}
     <li>
-      <span class="completed-task-group">Completed by: {{ completed_by }}</span>
-      <ul>
-        {% for todo in todos %}
-        <li>
-          <span class="completed-task">{{ todo.title }}</span>
-          <a href="{% url 'todo:todo_view' pk=todo.pk %}">View</a>  <!-- Add the view link -->
+      <!-- CRUD for completed tasks -->
+      <span class="completed-task">{{ todo.title }}</span>
+          <a href="{% url 'todo:todo_view' pk=todo.pk %}">View</a> <!--  -->
           <a href="{% url 'todo:todo_completed_update' pk=todo.pk %}">Edit</a>
           <a href="{% url 'todo:todo_completed_delete' pk=todo.pk %}">Delete</a>
         </li>
@@ -67,11 +68,12 @@
     </div>
   </div>
   
-  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-  <script>
-   
-   $(document).ready(function() {
-    
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+  $(document).ready(function() {
     $('.complete-btn').click(function() {
       var taskId = $(this).data('task-id');
       $('#taskIdInput').val(taskId);
@@ -95,76 +97,8 @@
       });
     });
   });
-
-  </script>
+</script>
 {% endblock %}
 
 
 
-
-/* 
-<!-- 
-<h2>Todo List</h2>
-<ul>
-  {% for todo in todos %}
-    <li>
-      <form method="post" action="{% url 'todo:todo_update' pk=todo.pk %}">
-        {% csrf_token %}
-        <input type="hidden" name="completed_by" value="{{ todo.completed_by }}">
-        <input type="checkbox" {% if todo.completed %}checked{% endif %} 
-               onchange="this.form.submit()">
-        {{ todo.title }}
-        <a href="{% url 'todo:todo_update' pk=todo.pk %}">Edit</a>
-        <a href="{% url 'todo:todo_delete' pk=todo.pk %}">Delete</a>
-        {% if todo.completed %}
-          <p>Completed by: {{ todo.completed_by }}</p>
-        {% endif %}
-      </form>
-    </li>
-  {% empty %}
-    <li>No todos found.</li>
-  {% endfor %}
-</ul>
-<a href="{% url 'todo:todo_create' %}">Create New Todo</a>
- -->
-   */
-
-
-/* <!-- 
-
-
-<h2>Todo List</h2>
-
-<h3>User Todos</h3>
-<form method="POST" action="{% url 'todo:create_todo' %}">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Add</button>
-</form>
-
-<ul>
-    {% for todo in user_todos %}
-        <li>
-            <label for="todo_{{ todo.id }}">
-                <input type="checkbox" id="todo_{{ todo.id }}" onclick="toggleCheckbox('todo_{{ todo.id }}');" {% if todo.completed %}checked{% endif %}>
-                {{ todo.title }}
-            </label>
-        </li>
-    {% endfor %}
-</ul>
-
-<h3>Guest Todos</h3>
-
-<ul>
-    {% for todo in guest_todos %}
-        <li>
-            <label for="todo_{{ todo.id }}">
-                <input type="checkbox" id="todo_{{ todo.id }}" onclick="toggleCheckbox('todo_{{ todo.id }}');" {% if todo.completed %}checked{% endif %}>
-                {{ todo.title }}
-            </label>
-        </li>
-    {% endfor %}
-</ul>
-
-
- --> */
