--- a/todo/templates/todo/create_todo.html
+++ b/todo/templates/todo/create_todo.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html>
 <head>
     <title>Create Todo</title>
@@ -14,4 +14,4 @@
         <input type="submit" value="Create Todo">
     </form>
 </body>
-</html>
+</html> -->
